# hive-operator

./: .gitignore  CHANGELOG.md  Cargo.nix  Cargo.toml  Makefile  README.adoc  README.md  crate-hashes.json  deny.toml
.ci/integration-tests/aws-eks/: cluster.yaml
.ci/integration-tests/azure-aks/: cluster.yaml
.ci/integration-tests/hcloud-centos-8/: cluster.yaml
.ci/integration-tests/ionos-k8s/: cluster.yaml  test.sh
.github/ISSUE_TEMPLATE/: 02-bug_report.yml  bug_report.yml  config.yml  new_version.md
.github/actions/path-filter/: action.yaml
.github/workflows/: build.yaml  build.yml  integration-test.yml  pr_pre-commit.yaml  publish_dev_artifacts.yml  publish_main_artifacts.yml  publish_pr_artifacts.yml  publish_release_artifacts.yml
.readme/: README.md.j2
.readme/partials/: main.md.j2
_TEST/: Dockerfile  README.md  hive-metastore.yaml  secrets.yaml  trino.yaml
deploy/: DO_NOT_EDIT.md
deploy/config-spec/: properties.yaml
deploy/crd/: databaseconnection.crd.yaml  hivecluster.crd.yaml  restart.crd.yaml  start.crd.yaml  stop.crd.yaml
deploy/helm/hive-operator/: Chart.yaml  README.md  values.yaml
deploy/helm/hive-operator/configs/: properties.yaml
deploy/helm/hive-operator/crds/: crds.yaml
deploy/helm/hive-operator/templates/: clusterrole-operator.yaml  clusterrole-product.yaml  roles.yaml
deploy/manifests/: configmap.yaml  crds.yaml  deployment.yaml  roles.yaml  serviceaccount.yaml
deploy/olm/: bundle.sh
deploy/olm/23.4.0/manifests/: stackable-hive-operator.clusterserviceversion.yaml
docker/: Dockerfile
docs/: antora.yml  templating_vars.yaml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: commandline_args.adoc  discovery.adoc  env_var_args.adoc  index.adoc  installation.adoc  usage.adoc
docs/modules/ROOT/partials/: supported-versions.adoc
docs/modules/getting_started/pages/: first_steps.adoc  index.adoc  installation.adoc
docs/modules/hive/: nav.adoc
docs/modules/hive/pages/: cluster_operations.adoc  discovery.adoc  env_var_args.adoc  index.adoc  required-external-components.adoc  usage.adoc
docs/modules/hive/partials/: nav.adoc  supported-versions.adoc
examples/: hive-opa-cluster.yaml  restart.command.example.yaml  simple-hive-cluster-derby.yaml  simple-hive-cluster-postgres-s3.yaml  simple-hive-cluster-postgres.yaml  simple-hive-cluster.yaml  start.command.example.yaml  stop.command.example.yaml
extra/: crds.yaml
nix/: meta.json
rust/crd/: Cargo.toml
rust/crd/src/: affinity.rs  commands.rs  discovery.rs  error.rs  lib.rs  security.rs
rust/operator/: Cargo.toml
rust/operator-binary/: Cargo.toml  build.rs
rust/operator-binary/src/: command.rs  controller.rs  discovery.rs  framework.rs  kerberos.rs  listener.rs  main.rs  product_logging.rs  service.rs  stackable-hive-operator.rs
rust/operator-binary/src/config/: jvm.rs  mod.rs  opa.rs
rust/operator-binary/src/controller/: apply.rs  build.rs  dereference.rs  update_status.rs  validate.rs
rust/operator-binary/src/crd/: affinity.rs  databases.rs  mod.rs  security.rs
rust/operator-binary/src/framework/: role_group_utils.rs  role_utils.rs
rust/operator-binary/src/framework/builder/: meta.rs  pdb.rs
rust/operator-binary/src/framework/kvp/: label.rs
rust/operator-binary/src/framework/macros/: attributed_string_type.rs
rust/operator-binary/src/framework/product_logging/: framework.rs
rust/operator-binary/src/framework/types/: kubernetes.rs  operator.rs
rust/operator-binary/src/operations/: graceful_shutdown.rs  pdb.rs
rust/operator-binary/src/webhooks/: conversion.rs
rust/operator/src/: error.rs  lib.rs
scripts/: generate-manifests.sh  start-metastore
tests/: infrastructure.yaml  release.yaml  test-definition.yaml
tests/ansible/roles/expand-tests/: CHANGELOG.md
tests/templates/kuttl/cluster-operation/: 10-assert.yaml  10-install-hive.yaml.j2  20-assert.yaml  20-stop-hive.yaml.j2  30-assert.yaml  30-pause-hive.yaml.j2  40-assert.yaml  40-restart-hive.yaml.j2
tests/templates/kuttl/external-access/: 10-create-listener-classes.yaml  10-listener-classes.yaml  10_listener-classes.yaml  20-assert.yaml  20-install-hive.yaml  20_hive.yaml.j2  helm-bitnami-postgresql-values.yaml.j2  install-hive.yaml.j2  listener-classes.yaml
tests/templates/kuttl/kerberos/: 01-install-krb5-kdc.yaml.j2  15-assert.yaml.j2  15-hdfs-kerberos.yaml.j2  20-install-zk.yaml  (+12 more)
tests/templates/kuttl/kerberos-hdfs/: 00-patch-ns.yaml.j2  01-install-krb5-kdc.yaml.j2  02-create-kerberos-secretclass.yaml.j2  20-install-zk.yaml.j2  30-install-hdfs.yaml.j2  35-access-hdfs.yaml.j2  40-install-postgres.yaml.j2  60-assert.yaml.j2  60-install-hive.yaml.j2  70-install-access-hive.yaml.j2  80-assert.yaml  80-install-access-hive-from-spark.yaml.j2
tests/templates/kuttl/kerberos-s3/: 01-install-krb5-kdc.yaml.j2  30-setup-minio.yaml.j2  40-install-postgres.yaml.j2  60-assert.yaml.j2  60-install-hive.yaml.j2  70-install-access-hive.yaml.j2  helm-bitnami-minio-values.yaml.j2
(+134 files in other folders)
