[package]
name = "stackable-hive-operator"
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Stackable Operator for Apache Hive"
license = "OSL-3.0"
version = "0.6.0-nightly"
edition = "2021"
repository = "https://github.com/stackabletech/hive-operator"

[dependencies]
failure = "0.1"
futures = { version = "0.3", features = ["compat"] }
semver = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
snafu = "0.6"
structopt = "0.3"
strum = "0.22"
strum_macros = "0.22"
tokio = { version = "1.12", features = ["full"] }
tokio01 = { version = "0.1", package = "tokio" }
tokio-executor = "0.1"
tracing = "0.1"
pin-project = "1.0"
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.6.0" }
stackable-hive-crd = { path = "../crd" }
anyhow = "1.0"
fnv = "1.0"

[build-dependencies]
built = { version =  "0.5", features = ["chrono", "git2"] }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.6.0" }
stackable-hive-crd = { path = "../crd" }

[[bin]]
name = "stackable-hive-operator"
path = "src/main.rs"
