[package]
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Stackable Operator for Apache Hive"
edition = "2021"
license = "OSL-3.0"
name = "stackable-hive-operator"
repository = "https://github.com/stackabletech/hive-operator"
version = "0.0.0-dev"
publish = false

[dependencies]
anyhow = "1.0"
clap = "4.3"
fnv = "1.0"
futures = { version = "0.3", features = ["compat"] }
pin-project = "1.0"
semver = "1.0"
serde = "1.0"
serde_json = "1.0"
snafu = "0.7"
stackable-hive-crd = { path = "../crd" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.42.2" }
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1.23", features = ["full"] }
tracing = "0.1"

[build-dependencies]
built = { version =  "0.5", features = ["chrono", "git2"] }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.42.2" }
stackable-hive-crd = { path = "../crd" }
